--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,16 +4,16 @@ apply plugin: "kotlin-android"
 
 apply plugin: "kotlin-android-extensions"
 
-apply plugin: 'kotlin-kapt'
+apply plugin: "kotlin-kapt"
 
 android {
     compileSdkVersion Versions.compileSdk
     defaultConfig {
-        applicationId ApplicationId.id
+        applicationId "com.bsaugues.cleansample"
         minSdkVersion Versions.minSdk
         targetSdkVersion Versions.targetSdk
-        versionCode Releases.versionCode
-        versionName Releases.versionName
+        versionCode Versions.releaseVersionCode
+        versionName Versions.releaseVersionName
         testInstrumentationRunner TestLibraries.runnerClass
 
         resConfigs Languages.english, Languages.french
