--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,11 @@
 include Modules.app
+
+void rename_build_file_to_module_name(project) {
+    project.buildFileName = "${project.name}_build.gradle"
+    project.children.each { child -> rename_build_file_to_module_name(child) }
+}
+
+// Will rename every module's build.gradle file to add its name instead of just `build`.
+// E.g. `app/build.gradle` will become `app/app_build.gradle`
+// The root build.gradle file will remain untouched
+rootProject.children.each { subproject -> rename_build_file_to_module_name(subproject) }
