--- a/app/app_build.gradle
+++ b/app/app_build.gradle
@@ -56,6 +56,8 @@ dependencies {
     kapt Libraries.daggerAndroidProcessor
     implementation SupportLibraries.daggerAndroidSupport
 
+    implementation Libraries.timber
+
     testImplementation TestLibraries.junit
     testImplementation TestLibraries.lifecycleTesting
     testImplementation TestLibraries.roomTesting
