[FEAT] migrated dagger 2 to koin

--- a/app/app_build.gradle
+++ b/app/app_build.gradle
@@ -51,10 +51,7 @@ dependencies {
     implementation Libraries.roomRuntime
     kapt Libraries.roomCompiler
 
-    kapt Libraries.daggerCompiler
-    implementation Libraries.daggerAndroid
-    kapt Libraries.daggerAndroidProcessor
-    implementation SupportLibraries.daggerAndroidSupport
+    implementation Libraries.koin
 
     implementation Libraries.timber
 
